# Omnibrowser

./: .eslintignore  .gitignore  .prettierignore  ARCHITECTURE.md  ARCHITECTURE_ENHANCEMENTS.md  CHANGELOG.md  CI_DEBUG_GUIDE.md  CI_FIXES_FINAL.md  CI_FIX_SUMMARY.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMPLETE_STATUS.md  CONSENT_LEDGER.md  FIXES_APPLIED.md  ISSUES_FIXED.md  LAUNCH_CHECKLIST.md  PRIVACY.md  PRODUCTION_READINESS_ASSESSMENT.md  PROJECT_CHECKLIST.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_CI.md  REAL_TIME_AUDIT.md  REDIX_ARCHITECTURE_PLAN.md  ROADMAP.md  ROADMAP_COMPLETION.md  SECURITY.md  SYSTEM_BLUEPRINT.md  TESTING_GUIDE.md  VIRAL_FEATURES_STATUS.md  WHAT_TO_DO_NEXT.md  eslint.config.mjs  example.env  index.html  package-lock.json  package.json  playwright.config.ts  start-complete.ps1  (+6 more)
dist-web/: index.html
docs/: AI_OFFLINE_TEST_RESULTS.md  BETA_RELEASE_CHECKLIST.md  CI_SETUP.md  DEMO_SCRIPT.md  EXTENSION_SDK.md  EXTENSION_SDK_PLAN.md  FULL_FUNCTIONALITY_TEST_RESULTS.md  IMMEDIATE_TASKS_COMPLETE.md  INSTALLATION_GUIDE.md  INTEGRATION_GUIDE.md  PRODUCTION_FIXES.md  PRODUCTION_FIXES_SUMMARY.md  QUICKSTART.md  REALTIME_INTEGRATION_GUIDE.md  SPRINT_SUMMARY.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  UI_UX_FIXES.md  USER_GUIDE.md  consent-ledger-tour.md  project-board-setup.md  release-checklist.md  release-pipeline-verification.md  sprint2-ai-engine.md  verification-status.md
tauri-migration/src-tauri/: Cargo.toml  QUICK_START.md  SETUP.md  tauri.conf.json
tauri-migration/src-tauri/src/: browser.rs  main.rs
(+1014 files in other folders)
